@@ -2,6 +2,8 @@ Release Notes
 
 * 1/15/2016
   * changed message type for WORLD taskbrokerage
+  * setting maxWalltime to maxCpuCount for HS06
+  * changed AtlasPJB to support 3 digits base releases
 
 * 1/14/2016
   * changed setScoutJobData so that tasks go to exhausted when execution time is unexpectedly too long
